2008-03-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler.h, src/rbpoppler-page.c, src/rbpoppler-action.c,
	src/rbpoppler-document.c: added POPPLER_ prefix.

	* src/rbpoppler.h, src/rbpoppler-page.c, src/rbpoppler-action.c:
	hide conversion macros.

	* src/rbpoppler.h, src/rbpoppler-page.c: COLOR -> POPPLER_COLOR.

	* src/rbpoppler.h, src/rbpoppler-page.c: hid GDK related macros.

	* src/rbpoppler.h, src/rbpoppler-page.c: RECT -> POPPLER_RECT.

	* README: marked poppler-glib 0.8.0 is supported.

	* src/rbpoppler-page.c: used DEF_* macro.

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	methods for Poppler::AnnotationCalloutLine.

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	methods for Poppler::AnnotationFreeText.

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	methods for Poppler::AnnotationText.

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	methods for Poppler::AnnotationMarkup.

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	methods for Poppler::Annotation.

	* src/rbpoppler-page.c, src/rbpoppler.h: added POPPLER_COLOR2RVAL
	and POPPLER_COLOR2RVAL_FREE.

	* src/rbpoppler.[ch], src/rbpoppler-private.h: called
	Init_annotation().

	* src/rbpoppler-annotation.c, test/test_annotation.rb: implemented
	Poppler::Annotation#type.

	* src/rbpoppler-page.c:
	- defined missing methods: Poppler::ButtonField#type and
	Poppler::ChoiceField#toggle.
	- defined Poppler::Rectangle#inspect.

	* src/rbpoppler-page.c, test/test_page.rb: defined
	Poppler::AnnotationMapping methods.

	* src/rbpoppler-page.c: added missing static.

	* src/rbpoppler-page.c, test/test_page.rb: implemented
	Poppler::Page#annotation_mapping for 0.7.2.

2008-03-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-page.c (page_get_selection_region),
	test/test_page.rb (TestPage#test_selection_region): implemented
	Poppler::Page#get_selection_region for 0.7.2.
